
Changelog
=========

4.0.1 (unreleased)
------------------

- Nothing changed yet.


4.0.0 (2014-10-26)
------------------

- Changes to OGDS [phgross, deiferni]:

  - Replace `ContactInformation` utility with a service implemetation, available as `ogds_service`.
  - Update to latest `opengever.ogds.models` version.

  - Fixed encoding issues in the `EmailContactsAndUsersVocabularyFactory`.


- Replace Clients with OrgUnit/AdminUnit [phgross, deiferni]:

  - Remove one-to-one relationships of `PloneSite` and `Client` by introducting `AdminUnit` and `OrgUnit`.
  - An `AdminUnit` corresponds to one `PloneSite`.
  - An `AdminUnit` has a one-to-many relationship to `OrgUnit`.
  - Add utility functions to access the current `OrgUnit` and `AdminUnit`.
  - Add org-unit selector to switch between the user`s assigned org-units.
  - The oguid now consists of admin-unit-id and IntId.
  - Admin_unit intern `remote_requests` uses now unrestricted traversing.
  - Above changes concern the following functionality:

    - Sharing View
    - OGDS-Vocabularies
    - Default of task `responsible_client`
    - Cross plone-site request authentication
    - Cross plone-site wizards
    - PloneSite referencenumberpart is the admin_unit's abbreviation.


- Setup [phgross, deiferni]:

  - Make sure that inflator content-creation runs after gever setup.
  - Test that we correctly override ftw.inflator setuphandler configuration.
  - Create admin units and org units from generic setup profile.


- Inbox/Forwarding [phgross, deiferni]:

  - Use globalindex as data-source for task-listings (Overview, AssignedTasks, IssuedTasks).
  - Fix forwarding immediate view, use `issued_inbox_tasks` tab.
  - Assign forwarding to dossier: reset issuer to current inbox.
  - Accept task, edit in new dossier: Set default dossier title only for tasks but not for forwardings.
  - Inbox now ontains multiple Inboxes, one for each `OrgUnit`:

    - Allow nested inboxes.